@@ -2,7 +2,7 @@ package org.xyjh.xyjhstartweb.Config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer; // <-- 新增导入
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -10,74 +10,57 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration; // <-- 新增导入
-import org.springframework.web.cors.CorsConfigurationSource; // <-- 新增导入
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // <-- 新增导入
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.xyjh.xyjhstartweb.duduplan.security.DuduPlanAccessTokenFilter;
 
-import java.util.Arrays; // <-- 新增导入
-import java.util.List; // <-- 新增导入
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-
     private final JwtAuthenticationFilter jwtAuthFilter;
+    private final DuduPlanAccessTokenFilter duduPlanAccessTokenFilter;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter) {
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter, DuduPlanAccessTokenFilter duduPlanAccessTokenFilter) {
         this.jwtAuthFilter = jwtAuthFilter;
+        this.duduPlanAccessTokenFilter = duduPlanAccessTokenFilter;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 【修改点 1】: 添加 .cors() 来启用CORS配置
                 .cors(Customizer.withDefaults())
-
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authz -> authz
-                        // 客户端接口：全部放行
                         .requestMatchers("/api/license/**").permitAll()
                         .requestMatchers("/account/add").permitAll()
-
-                        // 修正并添加前端正在使用的登录路径
                         .requestMatchers("/api/admin/licenses/login").permitAll()
                         .requestMatchers("/api/admin/users/login").permitAll()
-                        
-                        // 文件访问接口：全部放行
+                        .requestMatchers("/api/account-xyjh/sync/refresh").permitAll()
+                        .requestMatchers("/api/dudu-plan/auth/**", "/api/dudu-plan/health", "/api/dudu-plan/realtime").permitAll()
                         .requestMatchers("/api/files/**").permitAll()
-                        // 静态文件访问：全部放行
                         .requestMatchers("/files/**").permitAll()
-
-                        // 其他所有管理员接口：必须认证
-                        .requestMatchers("/api/admin/**","/api/account-xyjh/**").authenticated()
-                        // 任何其他未匹配的请求：全部拒绝
+                        .requestMatchers("/api/admin/**", "/api/account-xyjh/**", "/api/dudu-plan/chat/**").authenticated()
                         .anyRequest().denyAll()
                 )
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(duduPlanAccessTokenFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(jwtAuthFilter, DuduPlanAccessTokenFilter.class);
 
         return http.build();
     }
 
-    // 【修改点 3】: 添加一个新的 Bean 来定义详细的CORS规则
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // 1. 允许你的前端来源
         configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-
-        // 2. 允许所有请求方法 (GET, POST, PUT, DELETE, OPTIONS)
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
-
-        // 3. 允许所有请求头 (特别是 Authorization 和 Content-Type)
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-
-        // 4. 是否允许发送凭证 (例如 Cookies)，如果需要的话
-        // configuration.setAllowCredentials(true);
+        configuration.setAllowedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // 对所有 API 路径应用此CORS配置
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
